# microsim-web-component

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: release.yml
scripts/: gen_images.py  main.py
src/: image-viewer.js  microsim-viewer.js  style.css
