[project]
name = "microsim-web-component"
version = "0.1.0"
description = "A web component for microsim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "microsim[jax,cosem,io]>=0.0.11",
    "pdbpp>=0.11.7",
    "rich>=14.2.0",
    "ruff>=0.14.6",
]
